Privacy policy translations / link changes

--- a/theme/login/messages/messages_it.properties
+++ b/theme/login/messages/messages_it.properties
@@ -519,7 +519,7 @@ requiredAction.CONFIGURE_TOTP = Configura OTP
 updateProfileMessage = Devi aggiornare il tuo profilo utente per attivare il tuo account.
 resetPasswordMessage = Devi cambiare la tua password.
 linkIdpMessage = Devi verificare il tuo indirizzo email per collegare il tuo account con {0}.
-terms = Continuando, confermo di accettare <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Termini di servizio</a> e accetta l'<a href=''#/privacy-policy'' target=''_blank''> Norme sulla privacy di FGPE </a>.
+terms = Continuando, confermo di accettare <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Termini di servizio</a> e accetta l'<a href=''https://usz.edu.pl/rodo/'' target=''_blank''> Norme sulla privacy di FGPE </a>.
 termsTitle = Termini e condizioni
 termsText = <p> Termini e condizioni da definire </p>
 termsPlainText = Termini e condizioni da definire.
