--- a/theme/login/messages/messages_pl.properties
+++ b/theme/login/messages/messages_pl.properties
@@ -519,7 +519,7 @@ requiredAction.CONFIGURE_TOTP = Skonfiguruj OTP
 updateProfileMessage = Aby aktywować konto, musisz zaktualizować swój profil użytkownika.
 resetPasswordMessage = Musisz zmienić swoje hasło.
 linkIdpMessage = Musisz zweryfikować swój adres e-mail, aby połączyć swoje konto z {0}.
-terms = Kontynuując, potwierdzam, że wyrażam zgodę <a href=''#/terms-of-use'' target=''_blank'' class=''blue''> FGPE''s Warunki korzystania z usługi </a> i zapoznaj się z <a href=''#/privacy-policy'' target=''_blank''> Polityką prywatności FGPE </a>.
+terms = Kontynuując, potwierdzam, że zgadzam się z <a href=''#/terms-of-use'' target=''_blank'' class=''blue''> Warunkami korzystania z platformy FGPE </a> i zapoznałem/am się z <a href=''https://usz.edu.pl/rodo/'' target=''_blank''> Polityką prywatności Uniwersytetu Szczecińskiego </a>.
 termsTitle = Regulamin
 termsText = <p> Warunki do ustalenia </p>
 termsPlainText = Warunki do zdefiniowania.
