--- a/theme/login/messages/messages_pt.properties
+++ b/theme/login/messages/messages_pt.properties
@@ -519,7 +519,7 @@ requiredAction.CONFIGURE_TOTP = Configurar OTP
 updateProfileMessage = Você precisa atualizar seu perfil de usuário para ativar sua conta.
 resetPasswordMessage = Você precisa alterar sua senha.
 linkIdpMessage = Você precisa verificar seu endereço de e-mail para vincular sua conta a {0}.
-terms = Ao continuar, confirmo que concordo com os <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Termos de Serviço</a> e reconheça a <a href=''#/privacy-policy'' target=''_blank''>Política de Privacidade do FGPE</a>.
+terms = Ao continuar, confirmo que concordo com os <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Termos de Serviço</a> e reconheça a <a href=''https://usz.edu.pl/rodo/'' target=''_blank''>Política de Privacidade do FGPE</a>.
 termsTitle = Termos e Condições
 termsText = <p>Termos e condições a serem definidos</p>
 termsPlainText = Termos e condições a serem definidos.
