--- a/theme/login/messages/messages_en.properties
+++ b/theme/login/messages/messages_en.properties
@@ -519,7 +519,7 @@ requiredAction.CONFIGURE_TOTP = Configure OTP
 updateProfileMessage = You need to update your user profile to activate your account.
 resetPasswordMessage = You need to change your password.
 linkIdpMessage = You need to verify your email address to link your account with {0}.
-terms = By continuing, I confirm that I agree to <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Terms of Service</a> and acknowledge <a href=''#/privacy-policy'' target=''_blank''>FGPE''s Privacy Policy</a>.
+terms = By continuing, I confirm that I agree to <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Terms of Service</a> and acknowledge <a href=''https://usz.edu.pl/rodo/'' target=''_blank''>University of Szczecin Privacy Policy</a>.
 termsTitle = Terms and Conditions
 termsText = <p>Terms and conditions to be defined</p>
 termsPlainText = Terms and conditions to be defined.
