--- a/theme/login/messages/messages_da.properties
+++ b/theme/login/messages/messages_da.properties
@@ -519,7 +519,7 @@ requiredAction.CONFIGURE_TOTP = Konfigurer OTP
 updateProfileMessage = Du skal opdatere din brugerprofil for at aktivere din konto.
 resetPasswordMessage = Du skal ændre din adgangskode.
 linkIdpMessage = Du skal bekræfte din e-mail-adresse for at linke din konto til {0}.
-terms = Ved at fortsætte bekræfter jeg, at jeg accepterer <a href=''#/terms-of-use'' target=''_blank'' class=''blue''>FGPE''s Servicevilkår</a> og anerkender <a href=''https://usz.edu.pl/rodo/'' target=''_blank''> FGPE''s fortrolighedspolitik </a>.
+terms = Ved at fortsætte bekræfter jeg, at jeg accepterer <a href=''https://python.usz.edu.pl/learning-platform/tos'' target=''_blank'' class=''blue''>FGPE''s Servicevilkår</a> og anerkender <a href=''https://usz.edu.pl/rodo/'' target=''_blank''> FGPE''s fortrolighedspolitik </a>.
 termsTitle = Vilkår og betingelser
 termsText = <p>Vilkår og betingelser, der skal defineres</p>
 termsPlainText = Vilkår og betingelser, der skal defineres.
