--- a/theme/login/messages/messages_nl.properties
+++ b/theme/login/messages/messages_nl.properties
@@ -518,7 +518,7 @@ requiredAction.CONFIGURE_TOTP = Configureer OTP
 updateProfileMessage = U moet uw gebruikersprofiel bijwerken om uw account te activeren.
 resetPasswordMessage = U moet uw wachtwoord wijzigen.
 linkIdpMessage = U moet uw e-mailadres verifi\u00EBren om uw account te koppelen aan {0}.
-terms = Door verder te gaan, bevestig ik dat ik hiermee akkoord met <a href=''#/terms-of-use'' target=''_blank'' class='' blue''>FGPE''s Servicevoorwaarden</a> en erken <a href=''https://usz.edu.pl/rodo/'' target=''_blank''>Privacybeleid van FGPE</a> .
+terms = Door verder te gaan, bevestig ik dat ik hiermee akkoord met <a href=''https://python.usz.edu.pl/learning-platform/tos'' target=''_blank'' class='' blue''>FGPE''s Servicevoorwaarden</a> en erken <a href=''https://usz.edu.pl/rodo/'' target=''_blank''>Privacybeleid van FGPE</a> .
 termsTitle = Voorwaarden
 termsText = <p> Bepaalde voorwaarden en condities </p>
 termsPlainText = Te bepalen voorwaarden.
